--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ h1 {
 }
 
 main {
-  margin: 1rem 2rem 3.75rem 2rem;
+  margin: 1.25rem 2rem 3.75rem 2rem;
 }
 
 p {
@@ -51,17 +51,63 @@ p {
   font-family: var(--ff-texting);
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 13px;
   line-height: 15px;
+  margin: 0 0.625rem;
   margin-bottom: 4rem;
 }
 
-.image-wrapper {
+.image-container {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  animation: image-fadein 1.5s ease;
+}
+
+@keyframes image-fadein {
+  from {
+    opacity: 0;
+    margin-top: 6rem;
+  }
+  to {
+    opacity: 1;
+    margin-top: 0;
+  }
+}
+
+.image-wrapper {
+  position: relative;
 }
 
 .image-wrapper img {
   border-radius: 1rem;
+  width: 100%;
+}
+
+.image-caption {
+  position: absolute;
+  font-family: var(--ff-heading);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 34px;
+  letter-spacing: 0.05em;
+  color: var(--fc-secondary);
+  background-color: var(--bg-quaternary);
+  border-radius: 1.5rem;
+  top: 1rem;
+  right: 1rem;
+  padding: 1px 1.5rem;
+  animation: caption-fadein 0.5s ease-in;
+}
+
+@keyframes caption-fadein {
+  from {
+    opacity: 0;
+    top: -1rem;
+  }
+  to {
+    opacity: 1;
+    top: 1rem;
+  }
 }
