--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
 :root {
   --ff-heading: "Staatliches", "sans-serif";
   --ff-texting: "Palanquin", "sans-serif";
+  --ff-texting-secondary: "Roboto", "sans-serif";
+  --ff-footer: "Open Sans", "sans-serif";
   --bg-primary: #8e9aaf;
   --bg-secondary: #cbc0d3;
   --bg-tertiary: #eff1ff;
@@ -20,8 +22,8 @@ body {
   text-align: center;
 }
 
-.logo {
-  margin: 2rem auto;
+.page {
+  display: block;
 }
 
 header {
@@ -29,8 +31,27 @@ header {
   padding-bottom: 1.81rem;
 }
 
-h1 {
+.logo {
+  margin: 2rem auto;
+}
+
+.header-text {
+  display: none;
+  color: #fff;
+  font-family: var(--ff-texting-secondary);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  padding-top: 3.18rem;
+  margin: 0 3rem;
+}
+
+.heading {
   background-color: var(--bg-secondary);
+}
+
+h1 {
   color: #fff;
   font-family: var(--ff-heading);
   font-style: normal;
@@ -39,6 +60,7 @@ h1 {
   line-height: 34px;
   letter-spacing: 0.05em;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  white-space: nowrap;
   padding: 0.5rem 0;
 }
 
@@ -55,6 +77,10 @@ p {
   line-height: 15px;
   margin: 0 0.625rem;
   margin-bottom: 4rem;
+}
+
+.desktop-image {
+  display: none;
 }
 
 .image-container {
@@ -109,5 +135,126 @@ p {
   to {
     opacity: 1;
     top: 1rem;
+  }
+}
+
+footer {
+  display: none;
+  color: var(--fc-secondary);
+  font-family: var(--ff-footer);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 28px;
+}
+
+.instagram-id {
+  font-weight: 700;
+}
+
+/* /////////////////// */
+/* ---Media Queries--- */
+/* /////////////////// */
+
+@media (min-width: 1280px) {
+  body {
+    background-color: #fff;
+  }
+
+  .page {
+    display: flex;
+  }
+
+  header {
+    width: 29.4vw;
+    height: 100vh;
+  }
+
+  .logo {
+    margin: 2rem auto;
+    width: 57%;
+  }
+
+  .header-text {
+    display: block;
+  }
+
+  h1 {
+    font-size: 48px;
+    letter-spacing: 0;
+    width: 61%;
+    margin: 0 auto;
+    padding: 1.25rem 0;
+  }
+
+  main {
+    width: 70.6vw;
+    margin: 0;
+  }
+
+  main p {
+    display: none;
+  }
+
+  .desktop-image {
+    display: block;
+  }
+
+  .image-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 4rem auto 3.125rem auto;
+    min-width: 743px;
+    max-width: 60vw;
+  }
+
+  .image-container div:nth-child(1) {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 2;
+    grid-column-end: 1;
+  }
+
+  .image-container div:nth-child(2) {
+    grid-row-start: 1;
+    grid-column-start: 2;
+    grid-row-end: 3;
+    grid-column-end: 2;
+  }
+
+  .image-container div:nth-child(3) {
+    grid-row-start: 1;
+    grid-column-start: 3;
+    grid-row-end: 1;
+    grid-column-end: 3;
+  }
+
+  .image-container div:nth-child(4) {
+    grid-row-start: 2;
+    grid-column-start: 1;
+    grid-row-end: 4;
+    grid-column-end: 1;
+  }
+
+  .image-container div:nth-child(5) {
+    grid-row-start: 3;
+    grid-column-start: 2;
+    grid-row-end: 4;
+    grid-column-end: 2;
+  }
+
+  .image-container div:nth-child(6) {
+    grid-row-start: 2;
+    grid-column-start: 3;
+    grid-row-end: 4;
+    grid-column-end: 3;
+  }
+
+  .image-wrapper img {
+    width: 100%;
+  }
+
+  footer {
+    display: block;
   }
 }
