--- a/styles.css
+++ b/styles.css
@@ -35,14 +35,18 @@ header {
   margin: 2rem auto;
 }
 
+.tablet-logo {
+  display: none;
+}
+
 .header-text {
   display: none;
   color: #fff;
   font-family: var(--ff-texting-secondary);
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 1rem;
+  line-height: 1.25rem;
   padding-top: 3.18rem;
   margin: 0 3rem;
 }
@@ -56,8 +60,8 @@ h1 {
   font-family: var(--ff-heading);
   font-style: normal;
   font-weight: 400;
-  font-size: 40px;
-  line-height: 34px;
+  font-size: 2.5rem;
+  line-height: 2.125rem;
   letter-spacing: 0.05em;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   white-space: nowrap;
@@ -68,13 +72,13 @@ main {
   margin: 1.25rem 2rem 3.75rem 2rem;
 }
 
-p {
+main p {
   color: var(--fc-primary);
   font-family: var(--ff-texting);
   font-style: normal;
   font-weight: 500;
-  font-size: 13px;
-  line-height: 15px;
+  font-size: 0.8125rem;
+  line-height: 0.9375rem;
   margin: 0 0.625rem;
   margin-bottom: 4rem;
 }
@@ -115,8 +119,8 @@ p {
   font-family: var(--ff-heading);
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 34px;
+  font-size: 1.25rem;
+  line-height: 2.125rem;
   letter-spacing: 0.05em;
   color: var(--fc-secondary);
   background-color: var(--bg-quaternary);
@@ -144,8 +148,8 @@ footer {
   font-family: var(--ff-footer);
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 28px;
+  font-size: 0.875rem;
+  line-height: 1.75rem;
 }
 
 .instagram-id {
@@ -156,7 +160,89 @@ footer {
 /* ---Media Queries--- */
 /* /////////////////// */
 
-@media (min-width: 1280px) {
+@media (min-width: 37.5em) {
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem 0;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .tablet-logo {
+    display: block;
+    margin: 0;
+    margin-right: 1rem;
+  }
+
+  .heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 4rem;
+    padding: 0.25rem 0;
+  }
+
+  main {
+    margin: 1.75rem 2.5rem 2rem 2.5rem;
+  }
+
+  main p {
+    margin-right: auto;
+    margin-left: auto;
+    font-size: 1rem;
+  }
+
+  main p,
+  .image-container {
+    width: 74%;
+  }
+
+  .image-container {
+    animation: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0 auto 2rem auto;
+  }
+
+  .image-container div:nth-child(1) {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 2;
+    grid-column-end: 1;
+  }
+
+  .image-container div:nth-child(2) {
+    grid-row-start: 1;
+    grid-column-start: 2;
+    grid-row-end: 3;
+    grid-column-end: 2;
+  }
+
+  .image-container div:nth-child(5) {
+    grid-row-start: 3;
+    grid-column-start: 2;
+    grid-row-end: 4;
+    grid-column-end: 2;
+  }
+
+  .image-container div:nth-child(6) {
+    grid-row-start: 2;
+    grid-column-start: 1;
+    grid-row-end: 4;
+    grid-column-end: 1;
+  }
+
+  footer {
+    display: block;
+  }
+}
+
+@media (min-width: 75em) {
   body {
     background-color: #fff;
   }
@@ -164,15 +250,22 @@ footer {
   .page {
     display: flex;
   }
-
   header {
+    display: block;
     width: 29.4vw;
     height: 100vh;
+    padding: 0;
   }
 
   .logo {
+    display: block;
+
     margin: 2rem auto;
     width: 57%;
+  }
+
+  .tablet-logo {
+    display: none;
   }
 
   .header-text {
@@ -180,7 +273,7 @@ footer {
   }
 
   h1 {
-    font-size: 48px;
+    font-size: 3rem;
     letter-spacing: 0;
     width: 61%;
     margin: 0 auto;
@@ -201,9 +294,9 @@ footer {
   }
 
   .image-container {
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 4rem auto 3.125rem auto;
+    width: auto;
     min-width: 743px;
     max-width: 60vw;
   }
@@ -248,13 +341,5 @@ footer {
     grid-column-start: 3;
     grid-row-end: 4;
     grid-column-end: 3;
-  }
-
-  .image-wrapper img {
-    width: 100%;
-  }
-
-  footer {
-    display: block;
   }
 }
