--- a/styles.css
+++ b/styles.css
@@ -206,35 +206,27 @@ footer {
     animation: none;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "A B"
+      "D B"
+      "D C";
     margin: 0 auto 2rem auto;
   }
 
   .image-container div:nth-child(1) {
-    grid-row-start: 1;
-    grid-column-start: 1;
-    grid-row-end: 2;
-    grid-column-end: 1;
+    grid-area: A;
   }
 
   .image-container div:nth-child(2) {
-    grid-row-start: 1;
-    grid-column-start: 2;
-    grid-row-end: 3;
-    grid-column-end: 2;
+    grid-area: B;
   }
 
   .image-container div:nth-child(5) {
-    grid-row-start: 3;
-    grid-column-start: 2;
-    grid-row-end: 4;
-    grid-column-end: 2;
+    grid-area: C;
   }
 
   .image-container div:nth-child(6) {
-    grid-row-start: 2;
-    grid-column-start: 1;
-    grid-row-end: 4;
-    grid-column-end: 1;
+    grid-area: D;
   }
 
   footer {
@@ -295,6 +287,10 @@ footer {
 
   .image-container {
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas:
+      "A B C"
+      "D B F"
+      "D E F";
     margin: 4rem auto 3.125rem auto;
     width: auto;
     min-width: 743px;
@@ -302,44 +298,26 @@ footer {
   }
 
   .image-container div:nth-child(1) {
-    grid-row-start: 1;
-    grid-column-start: 1;
-    grid-row-end: 2;
-    grid-column-end: 1;
+    grid-area: A;
   }
 
   .image-container div:nth-child(2) {
-    grid-row-start: 1;
-    grid-column-start: 2;
-    grid-row-end: 3;
-    grid-column-end: 2;
+    grid-area: B;
   }
 
   .image-container div:nth-child(3) {
-    grid-row-start: 1;
-    grid-column-start: 3;
-    grid-row-end: 1;
-    grid-column-end: 3;
+    grid-area: C;
   }
 
   .image-container div:nth-child(4) {
-    grid-row-start: 2;
-    grid-column-start: 1;
-    grid-row-end: 4;
-    grid-column-end: 1;
+    grid-area: D;
   }
 
   .image-container div:nth-child(5) {
-    grid-row-start: 3;
-    grid-column-start: 2;
-    grid-row-end: 4;
-    grid-column-end: 2;
+    grid-area: E;
   }
 
   .image-container div:nth-child(6) {
-    grid-row-start: 2;
-    grid-column-start: 3;
-    grid-row-end: 4;
-    grid-column-end: 3;
+    grid-area: F;
   }
 }
